kong/kong-control-plane-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kong
  name: kong-control-plane
  labels:
    app: kong-control-plane
spec:
  selector:
    matchLabels:
      app: kong-control-plane
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        k8s.konghq.com/sidecar-inject: "false"
        prometheus.io/port: "8001"
        prometheus.io/scrape: "true"
      labels:
        app: kong-control-plane
    spec:
      serviceAccountName: kong
      containers:
      - name: kong-control-plane
        image: hub.vpclub.cn/xyyd/kong:2.1
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: api-server-cert
            mountPath: /api-server-cert
        ports:
        - name: admin-http
          containerPort: 8001
        - name: admin-https
          containerPort: 8444
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: 8001
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: 8001
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
      volumes:
      - name: api-server-cert
        secret:
          secretName: kong-control-plane.kong.svc
---
apiVersion: v1
kind: Service
metadata:
  namespace: kong
  name: kong-control-plane
spec:
  type: ClusterIP
  ports:
    - port: 8001
  selector:
    app: kong-control-plane
